--- a/MyFrstApp/app/src/main/res/layout/activity_main_activitty.xml
+++ b/MyFrstApp/app/src/main/res/layout/activity_main_activitty.xml
@@ -9,6 +9,38 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.arefin.myfrstapp.MainActivitty">
 
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
+    <RadioGroup
+        android:id="@+id/radioSelect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Web Page"
+        android:id="@+id/rdbWebPage"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:checked="false" />
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Plain Text"
+        android:id="@+id/rdbPlaintext"
+        android:checked="true"
+        android:layout_below="@+id/rdbWebPage"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+    </RadioGroup>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +58,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Enter Your URL Below"
-        android:id="@+id/textView"
+        android:id="@+id/txtViewLbl"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -36,10 +68,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtUrl"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/txtViewLbl"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="23dp"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView" />
+        android:layout_alignRight="@+id/txtViewLbl"
+        android:layout_alignEnd="@+id/txtViewLbl" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/txtViewResponse"
+        android:layout_below="@+id/btnPress"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="36dp"
+        android:layout_alignRight="@+id/btnPress"
+        android:layout_alignEnd="@+id/btnPress" />
+
+    <WebView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/webView"
+        android:visibility="invisible"
+        android:layout_below="@+id/btnPress"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
+
 </RelativeLayout>
